--- a/Dockerfile.1.11.1
+++ b/Dockerfile.1.11.1
@@ -9,4 +9,4 @@ RUN npx cypress install
 FROM first AS second
 
 RUN apt-get update
-RUN apt-get install chromium=130.0.6723.91-1~deb12u1 chromium-common=130.0.6723.91-1~deb12u1 -y
+RUN apt-get install chromium -y
